--- a/sgim/templates/includes/nav_bar.html
+++ b/sgim/templates/includes/nav_bar.html
@@ -28,8 +28,9 @@
                         <!-- <li><a href="{% url 'tareas_list' %}">Tareas</a></li> -->
                         <li><a href="{% url 'rutinas_list' %}">Rutinas</a></li>
                         <li><a href="{% url 'planes_list' %}">Planes</a></li>
-                        <li class="divider"></li>
                         <li><a href="{% url 'boletas_list' %}">Boletas</a></li>
+                        <li class="divider"></li>
+                         <li><a href="{% url 'mantto_mensual_stats' %}">Estadisticas Mantenimientos</a></li>
                     </ul>
                 </li> 
                 <li class="dropdown" >
