--- a/sgim/templates/incidencias/incidencias.html
+++ b/sgim/templates/incidencias/incidencias.html
@@ -59,6 +59,40 @@ Incidencias
 
 <div class="container-fluid">
     <div class="row">
+        <div class="col-md-10 col-md-offset-1" >
+
+            <div class="panel panel-default">
+                <div class="panel-body">
+                  <div class="ui items">
+                    <div class="item">
+                      <a class="ui small image">
+                        <img src="{{STATIC_URL}}images/Incidencias.png" width:'100px'>
+                      </a>
+                      <div class="content">
+                        <a class="header" style='text-decoration:none'>Incidencia</a>
+                        <div class="description">
+                          <p> Cualquier evento que no forma parte del desarrollo habitual de un servicio o dispositivo y que causa, o puede causar una interrupción del mismo o una reducción de la calidad de dicho servicio o dispositivo. 
+                           </p>
+                        </div>
+
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+
+            </div>
+
+            <div id="jqxgrid">
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="container-fluid">
+    <div class="row">
         
         <div class="col-md-12" >
             <div id="jqxgrid"></div>
