--- a/sgim/templates/mantto/estadistica_mensual.html
+++ b/sgim/templates/mantto/estadistica_mensual.html
@@ -18,10 +18,10 @@ Estadisticas mensuales
 	<a class="item" href="/">
 		<i class="home icon"></i> Inicio
 	</a>
-    <a class="active item" href="{% url 'mensual_stats' %}">
+    <a class="active item" href="{% url 'mantto_mensual_stats' %}">
     	<i class="ion-stats-bars icon"></i> Estadisticas Mensuales
     </a>
-    <a class=" item" href="{% url 'anual_stats' %}">
+    <a class=" item" href="{% url 'mantto_anual_stats' %}">
         <i class="ion-stats-bars icon"></i> Estadisticas Anuales
     </a>
 </div>
