--- a/sgim/templates/inventario/componentes.html
+++ b/sgim/templates/inventario/componentes.html
@@ -14,4 +14,33 @@
           </a>
           {% endif %}
     </div>
+
+    <div class="container-fluid">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1" >
+      <div class="panel panel-default">
+        <div class="panel-body">
+           
+
+            <div class="ui items">
+                    <div class="item">
+                      <a class="ui small image">
+                        <img src="{{STATIC_URL}}images/girl1.png">
+                      </a>
+                      <div class="content">
+                        <a class="header">Lo sentimos</a>
+                        <div class="description">
+                          <p> Esta seccion pronto estara disponible. <br>
+                              Vuelve pronto 
+                           </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock contenido %}
