--- a/sgim/templates/inventario/servicios.html
+++ b/sgim/templates/inventario/servicios.html
@@ -14,4 +14,44 @@
           </a>
           {% endif %}
     </div>
+
+
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1" >
+      <div class="panel panel-default">
+        <div class="panel-body">
+            <h2 class="ui header">
+              <i class="settings icon"></i>
+              <div class="content">
+                Servicios
+              </div>
+            </h2>
+
+              <table class="ui blue table">
+                <thead>
+                  <tr>
+                    <th>Servicio</th>
+                    <th>Tipo</th>
+                    <th>Descripcion</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for serv in servicios %}
+                    <tr>
+                      <td>{{serv.nombre}}</td>
+                      <td>{{serv.tipo.nombre}}</td>
+                      <td>{{serv.descripcion}}</td>
+                    </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock contenido %}
