--- a/sgim/templates/incidencias/nueva_incidencia.html
+++ b/sgim/templates/incidencias/nueva_incidencia.html
@@ -370,21 +370,22 @@ var relacionSource =
             url: '/api/catalogo/personal/?cargo=2'
         };
         var personalAdapter = new $.jqx.dataAdapter(personalSource);
-    $("#notifica").jqxComboBox({ theme:'metro', promptText: "Quien notifica...",source:personalAdapter, displayMember: 'nombre_completo',
-    	 valueMember: 'id'});
+    $("#notifica").jqxComboBox({ theme:'metro', promptText: "Quien notifica...",source:personalAdapter, displayMember: 'nombre_completo', valueMember: 'id',  searchMode: 'contains'});
+
     var dispositivoSource =
         {
             dataType: "json",
             dataFields: [
                 { name: 'id'},
                 { name:'posicion_logica'},
+                { name:'display'},
                 { name:'serie'}
             ],
             url: '/api/inventario/dispositivos/'
         };
         var dispositivoAdap = new $.jqx.dataAdapter(dispositivoSource);
 
-     $("#dispositivo").jqxComboBox({ theme:'metro', promptText: "Selecciona el dispositivo...",  source: dispositivoAdap, displayMember: 'posicion_logica', valueMember: 'id'});
+     $("#dispositivo").jqxComboBox({ theme:'metro', promptText: "Selecciona el dispositivo...",  source: dispositivoAdap, displayMember: 'display', valueMember: 'id',autoComplete:true,  searchMode: 'contains'});
      var tipoIncSource =
         {
             dataType: "json",
@@ -396,7 +397,7 @@ var relacionSource =
         };
         var tipoIncAdap = new $.jqx.dataAdapter(tipoIncSource);
 
-     $("#tipo").jqxComboBox({ theme:'metro', promptText: "Que tipo de incidente es...",  source: tipoIncAdap, displayMember: 'nombre', valueMember: 'id' });
+     $("#tipo").jqxComboBox({ theme:'metro', promptText: "Que tipo de incidente es...",  source: tipoIncAdap, displayMember: 'nombre', valueMember: 'id',  searchMode: 'contains' });
       
       var servicioSource =
         {
