--- a/sgim/templates/inventario/dispositivos.html
+++ b/sgim/templates/inventario/dispositivos.html
@@ -44,7 +44,7 @@
           <a class="active item" href="{% url 'dispositivos_list' %}">
             <i class=" cubes icon"></i> Dispositivos
           </a>
-           {% if perms.mantenimiento.add_dispositivo %}   
+           {% if perms.inventario.add_dispositivo %}   
           <a class="item" href="{% url 'dispositivo_add' %}">
             <i class=" add icon"></i> Agregar Dispositivo
           </a>
