--- a/sgim/templates/incidencias/nueva_incidencia.html
+++ b/sgim/templates/incidencias/nueva_incidencia.html
@@ -370,7 +370,7 @@ var relacionSource =
             url: '/api/catalogo/personal/?cargo=2'
         };
         var personalAdapter = new $.jqx.dataAdapter(personalSource);
-    $("#notifica").jqxComboBox({ theme:'metro', promptText: "Quien notifica...",source:personalAdapter, displayMember: 'nombre_completo', valueMember: 'id',  searchMode: 'contains'});
+    $("#notifica").jqxComboBox({ theme:'metro', promptText: "Quien notifica...",source:personalAdapter, displayMember: 'nombre_completo', valueMember: 'id',  searchMode: 'containsignorecase'});
 
     var dispositivoSource =
         {
@@ -385,7 +385,7 @@ var relacionSource =
         };
         var dispositivoAdap = new $.jqx.dataAdapter(dispositivoSource);
 
-     $("#dispositivo").jqxComboBox({ theme:'metro', promptText: "Selecciona el dispositivo...",  source: dispositivoAdap, displayMember: 'display', valueMember: 'id',autoComplete:true,  searchMode: 'contains'});
+     $("#dispositivo").jqxComboBox({ theme:'metro', promptText: "Selecciona el dispositivo...",  source: dispositivoAdap, displayMember: 'display', valueMember: 'id',autoComplete:true,  searchMode: 'containsignorecase'});
      var tipoIncSource =
         {
             dataType: "json",
