--- a/sgim/templates/inventario/nuevo_componente.html
+++ b/sgim/templates/inventario/nuevo_componente.html
@@ -192,7 +192,8 @@ var tipoSource =
         var isntaladoAdap = new $.jqx.dataAdapter(isntalado);
 
      $("#instalado_en").jqxComboBox({ theme:'metro', promptText: "Instalado en...",  source: isntaladoAdap, 
-        displayMember: 'display', valueMember: 'id', autoComplete:true, searchMode: 'containsignorecase' });
+        displayMember: 'display', valueMember: 'id', autoComplete:true, searchMode: 'containsignorecase',
+        width:'90%' });
       
       /*$('#instalado_en').jqxComboBox({renderer: function (index, label, value) {
         var datarecord = isntaladoAdap.records[index];
