--- a/sgim/templates/inventario/nuevo_componente.html
+++ b/sgim/templates/inventario/nuevo_componente.html
@@ -193,7 +193,7 @@ var tipoSource =
 
      $("#instalado_en").jqxComboBox({ theme:'metro', promptText: "Instalado en...",  source: isntaladoAdap, 
         displayMember: 'display', valueMember: 'id', autoComplete:true, searchMode: 'containsignorecase',
-        width:'90%' });
+        width:'300px' });
       
       /*$('#instalado_en').jqxComboBox({renderer: function (index, label, value) {
         var datarecord = isntaladoAdap.records[index];
