--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -96,7 +96,7 @@
                         "bgcolor":"#00BCD4",
                         "color":"#fffff",
                         "icon":"<i class='icon ion-calendar'></i>",
-                        "target":"_blank"
+                        //"target":"_blank"
                     },
                     {
                         "id":"fb_mantto",
@@ -104,7 +104,7 @@
                         "bgcolor":"#607D8B",
                         "color":"#fffff",
                         "icon":"<i class='icon ion-ios-briefcase' data-title='Matt' data-content='Matt has been a member since July 2014'></i>",
-                        "target":"_blank"
+                        //"target":"_blank"
                     },
                     {
                         "id":"fb_incident",
