--- a/sgim/templates/incidencias/nueva_incidencia.html
+++ b/sgim/templates/incidencias/nueva_incidencia.html
@@ -360,7 +360,7 @@ var estadoSource =
     
     var relacionAdapter = new $.jqx.dataAdapter(relacionSource);
 
-    $("#relacion").jqxComboBox({ theme:'metro', promptText: "Relacion con otro incidente reciente...", source: relacionAdapter,displayMember: 'id', valueMember: 'id', width:'350px'});
+    $("#relacion").jqxComboBox({ theme:'metro', promptText: "Relacion con otro incidente reciente...", source: relacionAdapter,displayMember: 'id', valueMember: 'id',});
 
 	var personalSource =
         {
