--- a/sgim/templates/mantto/nuevo_plan.html
+++ b/sgim/templates/mantto/nuevo_plan.html
@@ -216,6 +216,7 @@ $(document).ready(function() {
   $("#limpiar").on('click',  function(event) {
         event.preventDefault();
         document.getElementById("form").reset();
+        $(".form-control").jqxComboBox('clearSelection'); 
     });
 
   $('#form').on('validationSuccess', function (event) { 
