--- a/sgim/templates/mantto/nueva_boleta.html
+++ b/sgim/templates/mantto/nueva_boleta.html
@@ -313,6 +313,7 @@ $(document).ready(function() {
   $("#limpiar").on('click',  function(event) {
         event.preventDefault();
         document.getElementById("form").reset();
+        $(".form-control").jqxComboBox('clearSelection'); 
     });
 
   $('#form').on('validationSuccess', function (event) { 
