--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -38,7 +38,7 @@
 <
       
 -->
- <script type="text/javascript" src="http://104.236.23.248:8500/socket.io/socket.io.js"></script>
+ <script type="text/javascript" src="//104.236.23.248/socket.io/socket.io.js"></script>
 
     {% block include_statics %}
         
