--- a/sgim/templates/mantto/rutinas.html
+++ b/sgim/templates/mantto/rutinas.html
@@ -145,7 +145,7 @@
                       var hoy = moment().format("YYYY-MM-DD HH:mm");
                       $('.cargando').toggleClass('active');                      
                       $.ajax({
-                          url: '/api/mantto/planes/'+row_id,
+                          url: '/api/mantto/planes/'+row_id+'/',
                           type: 'PUT',
                           dataType: 'json',
                           data: { 
