--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -36,9 +36,10 @@
       <link type="text/css" rel="stylesheet" href="{{BOWER_URL}}materialize/dist/css/materialize.css"  media="screen,projection"/>
       <script type="text/javascript" src="http://127.0.0.1:8500/socket.io/socket.io.js"></script>
 <
-      
+     <script type="text/javascript" src="https://104.236.23.248:7076/socket.io/socket.io.js"></script>
+
 -->
- <script type="text/javascript" src="https://104.236.23.248:7076/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="http://104.236.23.248:8500/socket.io/socket.io.js"></script>
 
     {% block include_statics %}
         
