--- a/sgim/templates/base2.html
+++ b/sgim/templates/base2.html
@@ -5,17 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% block titulo %}   {% endblock titulo %} </title>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+
+    <link rel="shortcut icon" href="{{STATIC_URL}}images/favicon.ico" type="image/x-icon">
+    <link href="{{STATIC_URL}}css/ionicons.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="{{BOWER_URL}}semantic-ui/dist/semantic.css">
  
     <script src="{{BOWER_URL}}jquery/dist/jquery.min.js"></script>
-    <script src="{{BOWER_URL}}jquery-cookie/jquery.cookie.js"></script>
-    <script src="{{STATIC_URL}}js/dist/1.js"></script>
+    <script src="{{BOWER_URL}}semantic-ui/dist/semantic.min.js"></script>    
 
-    <script src="{{BOWER_URL}}semantic-ui/dist/semantic.min.js"></script>
-    <link rel="stylesheet" href="{{BOWER_URL}}semantic-ui/dist/semantic.css">
-    <link rel="stylesheet" href="{{BOWER_URL}}snackbarjs/dist/snackbar.min.css">
-    <script src="{{BOWER_URL}}snackbarjs/dist/snackbar.min.js"></script>
-
-    <link rel="stylesheet" href="{{STATIC_URL}}css/todo.min.css">
+    <link rel="stylesheet" href="{{STATIC_URL}}css/estilos.css">
 
  <!--Import materialize.css-->
     <link href="{{BOWER_URL}}bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -23,38 +21,35 @@
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/material.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/ripples.min.css"  media="screen,projection"/>
 
-    <script src="{{BOWER_URL}}webcomponentsjs/webcomponents.js">  </script>
-
-    {% include "includes/polymer.html" %}
-    
-
     {% block include_statics %}
-
+        
     {% endblock include_statics %}
 
-        <script>
-            
-            $.snackbar({content: "<h5 style='color:yellow'><i class='warning yellow sign icon'></i> Se encontraron los siguientes inconvenientes: </h5>", timeout: 0 });
-        </script>
 </head>
-<body unresolved>
+<body >
 
+<div class="contain-to-grid sticky">
+    {% include "includes/nav_bar.html" %}
+</div>
+
+  
     {% block contenido %}
 
     {% endblock contenido %}
- 
 
     <script src="{{BOWER_URL}}bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/ripples.min.js"></script>
     <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/material.min.js"></script>
+
     <script>
-        $(document).ready(function() {
-                $.material.init();
+        $(document).ready(function() {  
+                $.material.init();               
         });
     </script>
-</body>
 
-<script src="{{BOWER_URL}}semantic-ui/dist/semantic.js" type="text/javascript"></script>
+
+    
+</body>
 
 {% block scripts %}
 
