--- a/sgim/templates/cuentas/login2.html
+++ b/sgim/templates/cuentas/login2.html
@@ -1,4 +1,4 @@
-	{% extends "base.html" %}
+	{% extends "base2.html" %}
 	{% load i18n %}
 	{% block titulo %}
 		Inicio de Sesion
@@ -19,13 +19,10 @@
           <div class="content">
              Sistema de información para la gestión de mantenimientos e incidentes de los dispositivos de cómputo del Centro de Control Radar Managua.
             <div class="sub header">
-               <p> <strong>Aeropuerto Internacional Augusto C. Sandino </strong></p> 
-               
+               <p> <strong>Aeropuerto Internacional Augusto C. Sandino </strong></p>                
             </div>
           </div>
         </h2>
-
-
     </div>
 </div>
 
